--- a/totp/index.html
+++ b/totp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/tauri.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reddy2FA - TOTP</title>
+    <title>R-2FA - TOTP</title>
   </head>
   <body></body>
 </html>
